# SC-relocal-lego-loam

./: drawTrajectory.py  iris.txt
SC-LeGO-LOAM/SC-LeGO-LOAM/: CMakeLists.txt  package.xml
SC-LeGO-LOAM/SC-LeGO-LOAM/include/: GPS2UTM.cpp  GPS2UTM.h  ImageAxesAdd.h  Scancontext.h  gnss_bestpose.h  tictoc.h  utility.h
SC-LeGO-LOAM/SC-LeGO-LOAM/launch/: relocal.rviz  relocal_img.rviz  scrun.launch  scrun_relocal.launch  slam.rviz
SC-LeGO-LOAM/SC-LeGO-LOAM/src/: ImageAxesAdd.cpp  Scancontext.cpp  Scancontext_iris.cpp  Scancontext_sci.cpp  featureAssociation.cpp  imageProjection.cpp  mapOptmization.cpp
SC-LeGO-LOAM/sc_cloud_msgs/: CMakeLists.txt  package.xml
caculateSCI/: CMakeLists.txt
caculateSCI/1/: .840d37b0f55ef9c524881de0eb088118f81dd56.cam
caculateSCI/1/255fail/: .7b768b58ee37e0b0633f2516f6c6b899b8cf0ec2.cam  1.pcd  2.pcd
caculateSCI/1/30fail/: 1.pcd  2.pcd
caculateSCI/1/KD树搜索与旋转/候选帧/点云/: 124.pcd  1241.pcd  125.pcd  126.pcd  133.pcd  134.pcd  138.pcd  334.pcd  83.pcd  84.pcd
caculateSCI/1/KD树搜索与旋转/查询帧/: 100.pcd
caculateSCI/include/: Scancontext.h
caculateSCI/src/: Scancontext.cpp  run.cpp
